[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eo-toolbox"
authors = [{name = "Nicolas Deffense", email = "nicolas.deffense@uclouvain.be"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    "sphinx~=4.3.0",
    "myst-parser",
    "furo",
    "nbsphinx",
    "ipython",
]